syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "com.grpc.spring.proto";

message User {
  string name = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  repeated string roles = 3;
}

service UserService {
  rpc GetUserDetails(User) returns (UserResponse);
}